# sandy-loader

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  PROJECTPLAN.md  README.md  run-tests.sh  test-java.sh  test-rust.sh  test.sh
dev-environment/: README.md
docs/: DEVELOPMENT_PLAN.md
examples/: README.md
installer/: README.md
java-interop/: README.md
modpack/manifest/: modpack.json
sandyloader/: Cargo.toml  README.md
sandyloader/bootstrap/: README.md
sandyloader/crates/bytecode/: README.md
sandyloader/crates/event-bus/: README.md
sandyloader/crates/jni-bridge/: Cargo.toml  README.md
sandyloader/crates/jni-bridge/src/: lib.rs
sandyloader/crates/memory-manager/: Cargo.toml  README.md
sandyloader/crates/memory-manager/src/: lib.rs
sandyloader/crates/mod-api/: Cargo.toml  README.md
sandyloader/crates/mod-api/src/: lib.rs
sandyloader/crates/registry/: README.md
sandyloader/crates/utils/: README.md
sandyloader/src/: lib.rs
test-mods/: README.md
test-mods/java/simple-item-mod/: build.gradle  gradle.properties  settings.gradle
test-mods/java/simple-item-mod/src/main/java/com/example/: Main.java
test-mods/java/simple-item-mod/src/main/java/com/sandyloader/testmod/: SimpleItemMod.java
test-mods/java/simple-item-mod/src/main/resources/: fabric.mod.json
test-mods/java/simple-item-mod/src/test/java/com/example/: MainTest.java
test-mods/java/simple-utility-mod/: build.gradle  settings.gradle
test-mods/java/simple-utility-mod/src/main/java/com/example/: Main.java
test-mods/java/simple-utility-mod/src/main/java/com/sandyloader/testmod/: SimpleUtilityMod.java
test-mods/java/simple-utility-mod/src/test/java/com/example/: MainTest.java
test-mods/rust/simple-item-mod/: Cargo.toml
test-mods/rust/simple-item-mod/src/: lib.rs
test-mods/rust/simple-utility-mod/: Cargo.toml
test-mods/rust/simple-utility-mod/src/: lib.rs
tools/: README.md
tools/decompiler/: README.md
tools/mod-analyzer/: Cargo.toml
tools/mod-analyzer/src/: main.rs
tools/patcher/: README.md
tools/profiler/: Cargo.toml  README.md
tools/profiler/src/: main.rs
tools/test-harness/: Cargo.toml
tools/test-harness/src/: main.rs
