[package]
name = "sandyloader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A memory-efficient Minecraft mod loader using Rust and JNI"

[dependencies]
jni = "0.21.1"
log = "0.4.20"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
jni-bridge = { path = "./crates/jni-bridge" }
memory-manager = { path = "./crates/memory-manager" }
mod-api = { path = "./crates/mod-api" }

[lib]
name = "sandyloader"
crate-type = ["cdylib", "rlib"]
