[package]
name = "mod-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory analysis tool for Minecraft mods"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
rand = "0.8.5"
